src/test/ui/proc-macro/span-preservation.stderr
error[E0308]: mismatched types
   |
   = note: expected type `()`
              found type `{integer}`

error[E0308]: mismatched types
  --> $DIR/span-preservation.rs:12:20
   |
LL |     let x: usize = "hello";;;;;
   |                    ^^^^^^^ expected usize, found reference
   |
   = note: expected type `usize`
              found type `&'static str`

error[E0308]: mismatched types
  --> $DIR/span-preservation.rs:18:29
   |
LL | fn b(x: Option<isize>) -> usize {
   |                           ----- expected `usize` because of return type
LL |     match x {
LL |         Some(x) => { return x },
   |                             ^ expected usize, found isize

error[E0308]: mismatched types
  --> $DIR/span-preservation.rs:34:22
   |
LL |     let x = Foo { a: 10isize };
   |                      ^^^^^^^ expected usize, found isize

error[E0560]: struct `c::Foo` has no field named `b`
  --> $DIR/span-preservation.rs:35:26
   |
LL |     let y = Foo { a: 10, b: 10isize };
   |                          ^ `c::Foo` does not have this field
   |
   = note: available fields are: `a`

error[E0308]: mismatched types
  --> $DIR/span-preservation.rs:48:5
   |
LL | extern "C" fn baz() {
   |                     - possibly return type missing here?
LL |     0
   |     ^ expected (), found integer
   |
   = note: expected type `()`
              found type `{integer}`

error: aborting due to 6 previous errors

Some errors have detailed explanations: E0308, E0560.
For more information about an error, try `rustc --explain E0308`.
